# RoBoard-Core

./: Cargo.toml  Justfile  LICENSE  flake.nix
examples/: write.rs
src/: events.rs  main.rs  messages.rs  nng_reciever.rs  sockets.rs  usb_sender.rs
src/flatbuffers/: geometry.fbs
src/messages/: mod.rs
src/messages/flatbuffers/: messages.fbs
