[package]
name = "roboard_core"
version = "0.1.0"
authors = ["kalmenn <kale@kalmenn.fr>"]
edition = '2024'
license = "MIT"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.19"
flatbuffers = "24.12.23"
tokio = { version = "1.49.0", no-default-features = true, features = [ "fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time" ] }
thiserror = "2.0.18"
